# Buster

./: .gitignore  INSTAGRAM_SCRAPING_ISSUE.md  README.md  git_status.txt  git_status_u.txt
backend/: .gitignore  README.md  info.json  main.py  requirements.txt  scraper.py  test_api.py
data/: fact_check_result.json  post_data.json  preprocessed.json
factchecker-prototype/: .env.example  .gitignore  QUICK_START.md  README.md  RENDER_DEPLOY.md  pyproject.toml  requirements-lock.txt  requirements.txt  setup.bat  setup.sh
factchecker-prototype/app/: api.py  fact_checker.py  fact_checker_v2.py  main.py  main_v2.py  preprocessor.py  scraper.py
factchecker-prototype/app/data/: fact_check_result.json  post_data.json  preprocessed.json
frontend/buster/: package-lock.json  package.json
frontend/buster/src/app/: globals.css  layout.js  page.js
frontend/buster/src/components/: CTASection.js  FeaturesSection.js  Footer.js  HeroSection.js  HowItWorksSection.js  Navbar.js  StatsSection.js  TestimonialsSection.js  UploadSection.js
